--- a/templates/tour-player/index.html
+++ b/templates/tour-player/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1, minimum-scale=1.0, maximum-scale=1.0">
-        <link rel="stylesheet" href="https://tour-360.ru/tour-player/latest/tour-player.css">
-        <script src="https://tour-360.ru/tour-player/latest/tour-player.js"></script>
+        <link rel="stylesheet" href="https://tour-360.ru/tour-player/2.1.1/tour-player.css">
+        <script src="https://tour-360.ru/tour-player/2.1.1/tour-player.js"></script>
         <title>PROJECT_NAME</title>
         <style>
             /* Цвет информационных маркеров */
