--- a/templates/tour-player/index.html
+++ b/templates/tour-player/index.html
@@ -22,12 +22,10 @@
         <script>
         Tour.init(false, {
             gallery: true,
-            controlPanel: false,
-            rendererType: "webgl"
+            controlPanel: false
         });
         Tour.on('load', function(data) {
-            //this.controls.autoRotate()
-            console.log(data)
+            // this.controls.autoRotate()
         })
         </script>
     </body>
