--- a/templates/demonstration/demonstration.html
+++ b/templates/demonstration/demonstration.html
@@ -135,11 +135,11 @@
   </p>
 
   <h2>Виртуальный тур</h2>
-  <iframe src="index.html"></iframe>
+  <iframe src="IFRAME_URL"></iframe>
   <p>Кода для вставки тура на сайт</p>
 
   <code>
-    &lt;iframe src="//tour-360.ru/projects/PROJECT_NAME/" width="640" height="480" frameborder="no" scrolling="no" allowfullscreen&gt;&lt;/iframe&gt;
+    &lt;iframe src="CODE_URL" width="640" height="480" frameborder="no" scrolling="no" allowfullscreen&gt;&lt;/iframe&gt;
   </code>
 
   <h2>Информация о туре</h2>
